# ChangeLog for app-portage/mirrorselect
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/mirrorselect/ChangeLog,v 1.18 2004/06/24 21:50:30 agriffis Exp $

  23 Jun 2004; Daniel Drake <dsd@gentoo.org> mirrorselect-0.84.ebuild:
  Marking 0.84 as stable, please upgrade

*mirrorselect-0.84 (15 Jun 2004)

  15 Jun 2004; <solar@gentoo.org> mirrorselect-0.84.ebuild:
  security update for bug found by Daniel Drake

  13 May 2004; Michael McCabe <randy@gentoo.org> mirrorselect-0.83.ebuild:
  Added s390 keywords

  02 May 2004; Tom Gall <tgall@gentoo.org> mirrorselect-0.83.ebuild:
  stable on ppc64

*mirrorselect-0.83 (21 Mar 2004)

  21 Mar 2004; John Mylchreest <johnm@gentoo.org> mirrorselect-0.82-r2.ebuild,
  mirrorselect-0.82-r3.ebuild, mirrorselect-0.83.ebuild:
  fixes up all currently opened bugs in mirrorselect

  07 Mar 2004; Tom Gall <tgall@gentoo.org> mirrorselect-0.82-r3.ebuild:
  stable on ppc64

  01 Mar 2004; <agriffis@gentoo.org> mirrorselect-0.82-r3.ebuild:
  stable on alpha and ia64

*mirrorselect-0.82-r3 (02 Feb 2004)

  02 Feb 2004; John Mylchreest <johnm@gentoo.org> mirrorselect-0.82-r3.ebuild,
  mirrorselect-0.82.ebuild:
  Bump to use id -u instead of whoami to check for root ID. resolves bug #40201

*mirrorselect-0.82-r2 (25 Jan 2004)

  25 Jan 2004; Brad House <brad_mssw@gentoo.org> mirrorselect-0.82-r2.ebuild:
  stable on amd64

*mirrorselect-0.82-r1 (29 Sep 2003)

  27 Oct 2003; Guy Martin <gmsoft@gentoo.org> mirrorselect-0.82-r1.ebuild:
  Marked stable on hppa.

  29 Sep 2003; John Mylchreest <johnm@gentoo.org>; metadata.xml,
  mirrorselect-0.82-r1.ebuild:
  adding metadata.xml

*mirrorselect-0.82-r1 (29 Sep 2003)

  29 Sep 2003; John Mylchreest <johnm@gentoo.org>;
  mirrorselect-0.82-r1.ebuild:
  Fixes bug 29869 - thanks to evanm@frap.net

  27 Sep 2003; John Mylchreest <johnm@gentoo.org>; mirrorselect-0.7-r1.ebuild,
  mirrorselect-0.82.ebuild:
  bumping to stable
