@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/mirrorselect/Attic/mirrorselect-0.84.ebuild,v 1.3 2004/06/24 21:50:30 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/mirrorselect/Attic/mirrorselect-0.84.ebuild,v 1.4 2004/08/22 14:58:55 johnm Exp $
 
 DESCRIPTION="Tool to help select distfiles mirrors for Gentoo"
 HOMEPAGE="http://www.gentoo.org/"
