@@ -1,6 +1,7 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/mirrorselect/Attic/mirrorselect-0.83.ebuild,v 1.5 2004/06/24 21:50:30 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/mirrorselect/Attic/mirrorselect-0.85.ebuild,v 1.1 2004/08/22 14:58:55 johnm Exp $
+
 
 DESCRIPTION="Tool to help select distfiles mirrors for Gentoo"
 HOMEPAGE="http://www.gentoo.org/"
@@ -8,7 +9,7 @@ SRC_URI="mirror://gentoo/${PF}.tbz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ppc sparc mips alpha arm hppa amd64 ppc64 s390"
+KEYWORDS="~x86 ~ppc ~sparc ~mips ~alpha ~arm ~hppa ~amd64 ~ppc64 ~s390"
 IUSE=""
 
 RDEPEND=">=dev-util/dialog-0.7
