@@ -1,6 +1,12 @@
 # ChangeLog for app-portage/mirrorselect
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/mirrorselect/ChangeLog,v 1.18 2004/06/24 21:50:30 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/mirrorselect/ChangeLog,v 1.19 2004/08/22 14:58:55 johnm Exp $
+
+*mirrorselect-0.85 (22 Aug 2004)
+
+  22 Aug 2004; John Mylchreest <johnm@gentoo.org> -mirrorselect-0.83.ebuild,
+  +mirrorselect-0.85.ebuild:
+  fixes bugs: 44916, 48018, 56721 and possibly few others.
 
   23 Jun 2004; Daniel Drake <dsd@gentoo.org> mirrorselect-0.84.ebuild:
   Marking 0.84 as stable, please upgrade
